[project]
name = "98tang_daysign_chromium"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jasmineamber",email = "jasmineamber@aliyun.com"},
]
dependencies = ["DrissionPage>=4.1.1.2", "bs4>=0.0.2", "httpx>=0.28.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
